fix(sticker): do not scale mobile when sticker moves out of bounds

--- a/src/components/sticker/sticker.module.css
+++ b/src/components/sticker/sticker.module.css
@@ -1,10 +1,10 @@
 .sticker {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   width: 200px;
   cursor: pointer;
-  transition: width 0.15s, filter 0,15s;
+  transition: width 0.15s;
 }
 
 @media screen and (min-width: 90em) {
@@ -31,6 +31,7 @@
 }
 
 .sticker-link {
+  transition: filter 0.15s;
   filter: drop-shadow(4px 0px 0 white) 
           drop-shadow(-4px 0px 0 white)
           drop-shadow(0px 4px 0 white)
